# diff_pd_public

./: .gitmodules  .travis.yml  LICENSE  README.md  environment.yml  install.sh
cpp/: CMakeLists.txt  main.cpp
cpp/core/include/common/: common.h  config.h  exception_with_call_stack.h  file_helper.h  geometry.h
cpp/core/include/fem/: deformable.h  finite_element_sample.h  hex_deformable.h  quad_deformable.h  tet_deformable.h  tri_deformable.h
cpp/core/include/friction/: frictional_boundary.h  planar_frictional_boundary.h  spherical_frictional_boundary.h
cpp/core/include/material/: corotated.h  linear.h  material.h  neohookean.h
cpp/core/include/mesh/: mesh.h
cpp/core/include/pd_energy/: corotated_pd_element_energy.h  deformation_gradient_auxiliary_data.h  pd_element_energy.h  pd_muscle_energy.h  pd_vertex_energy.h  planar_collision_pd_vertex_energy.h  volume_pd_element_energy.h
cpp/core/include/solver/: deformable_preconditioner.h  matrix_op.h  pardiso_spd_solver.h
cpp/core/include/state_force/: arc_contact_state_force.h  billiard_ball_state_force.h  gravitational_state_force.h  hydrodynamics_state_force.h  planar_contact_state_force.h  state_force.h
cpp/core/src/: .gitignore  py_diff_pd_core.i
cpp/core/src/common/: common.cpp  exception_with_call_stack.cpp  file_helper.cpp  geometry.cpp
cpp/core/src/fem/: deformable.cpp  deformable_actuation.cpp  deformable_friction.cpp  deformable_newton_backward.cpp  deformable_newton_forward.cpp  deformable_pd_energy.cpp  deformable_projective_dynamics_backward.cpp  deformable_projective_dynamics_forward.cpp  deformable_quasi_static.cpp  deformable_semi_implicit.cpp  deformable_state_force.cpp  finite_element_sample.cpp  hex_deformable.cpp  quad_deformable.cpp  tet_deformable.cpp  tri_deformable.cpp
cpp/core/src/friction/: planar_frictional_boundary.cpp  spherical_frictional_boundary.cpp
cpp/core/src/material/: corotated.cpp  linear.cpp  material.cpp  neohookean.cpp
cpp/core/src/mesh/: mesh.cpp
cpp/core/src/pd_energy/: corotated_pd_element_energy.cpp  deformation_gradient_auxiliary_data.cpp  pd_element_energy.cpp  pd_muscle_energy.cpp  pd_vertex_energy.cpp  planar_collision_pd_vertex_energy.cpp  (+1 more)
python/: .gitignore
(+156 files in other folders)
